Apply chatbox alignment fix only to FF
Applying the chatbox alignment fix to both the client and the firefox
browser leads to issues with the client.

In this patch a clean-ish hack is used to make sure the fix is only
applied when running firefox, not the discord client.

--- a/undead-discord.css
+++ b/undead-discord.css
@@ -256,9 +256,11 @@
   height: unset !important;
 }
 
-/* Fix non-centered text input box */
-.textArea-20yzAH[style*="height: auto"] {
-  height: 0px !important;
+/* Fix non-centered text input box in Firefox */
+@-moz-document url-prefix() {
+  .textArea-20yzAH[style*="height: auto"] {
+    height: 0px !important;
+  }
 }
 
 .keybind-shortcut span {
